# vyatta-op-vpn

./: .frlog  .gitignore  COPYING  Makefile.am  README  README.md  configure.ac
debian/: autogen.sh  changelog  control  copyright  lintian  rules  vyatta-op-vpn.postinst
lib/: OPMode.pm
lib/vpnprof/: OPMode.pm
scripts/: gen_local_rsa_key.pl  key-pair.template  show_vpn.pl  vyatta-dmvpn-op.pl  vyatta-gen-x509-keypair.in  vyatta-gen-x509-keypair.sh  vyatta-op-vpn.pl  vyatta-op-vpnprof.pl  vyatta-show-ipsec-status.pl  vyatta-show-vpn-debug.pl  vyatta-show-vpn.pl  vyatta-vpn-op.pl
src/: command_proc_base.hh  command_proc_show_vpn.cc  command_proc_show_vpn.hh  rl_str_proc.cc  rl_str_proc.hh
src/xsl/: show_vpn_ike_sa.xsl  show_vpn_ike_secrets.xsl  show_vpn_ike_status.xsl  show_vpn_ipsec_sa.xsl  show_vpn_ipsec_sa_statistics.xsl  show_vpn_ipsec_status.xsl
templates/clear/vpn/: node.def
templates/clear/vpn/ipsec-peer/: node.def
templates/clear/vpn/ipsec-peer/node.tag/: node.def
templates/clear/vpn/ipsec-peer/node.tag/tunnel/: node.def
templates/clear/vpn/ipsec-peer/node.tag/tunnel/node.tag/: node.def
templates/clear/vpn/ipsec-process/: node.def
templates/generate/vpn/: node.def
templates/generate/vpn/rsa-key/: node.def.in
templates/generate/vpn/rsa-key/bits/: node.def
templates/generate/vpn/rsa-key/bits/node.tag/: node.def  node.def.in
templates/generate/vpn/x509/: node.def
templates/generate/vpn/x509/key-pair/node.tag/: node.def  node.def.in
templates/reset/vpn/: node.def
templates/reset/vpn/ipsec-peer/: node.def
templates/reset/vpn/ipsec-peer/node.tag/: node.def  node.def.in
templates/reset/vpn/ipsec-peer/node.tag/tunnel/: node.def
templates/reset/vpn/ipsec-peer/node.tag/tunnel/node.tag/: node.def  node.def.in
templates/reset/vpn/ipsec-peer/node.tag/vti/: node.def  node.def.in
templates/reset/vpn/ipsec-profile/: node.def
templates/reset/vpn/ipsec-profile/node.tag/: node.def  node.def.in
templates/reset/vpn/ipsec-profile/node.tag/tunnel/: node.def
templates/reset/vpn/ipsec-profile/node.tag/tunnel/node.tag/: node.def  node.def.in
templates/restart/vpn/: node.def  node.def.in
templates/show/vpn/: node.def
templates/show/vpn/debug/: node.def  node.def.in
templates/show/vpn/debug/detail/: node.def  node.def.in
templates/show/vpn/debug/peer/: node.def
templates/show/vpn/debug/peer/node.tag/: node.def  node.def.in
templates/show/vpn/debug/peer/node.tag/tunnel/: node.def
templates/show/vpn/ike/: node.def
templates/show/vpn/ike/rsa-keys/: node.def  node.def.in
templates/show/vpn/ike/sa/: node.def  node.def.in
templates/show/vpn/ike/sa/nat-traversal/: node.def  node.def.in
templates/show/vpn/ike/sa/peer/: node.def
templates/show/vpn/ike/sa/peer/node.tag/: node.def  node.def.in
templates/show/vpn/ike/secrets/: node.def  node.def.in
templates/show/vpn/ike/status/: node.def  node.def.in
templates/show/vpn/ipsec/: node.def
templates/show/vpn/ipsec/connections/: node.def
templates/show/vpn/ipsec/peer/node.tag/: node.def.in
templates/show/vpn/ipsec/peer/node.tag/detail/: node.def.in
templates/show/vpn/ipsec/policy/: node.def
templates/show/vpn/ipsec/sa/: node.def  node.def.in
templates/show/vpn/ipsec/sa/detail/: node.def  node.def.in
templates/show/vpn/ipsec/sa/detail/connection/: node.def
templates/show/vpn/ipsec/sa/detail/peer/: node.def
templates/show/vpn/ipsec/sa/nat-traversal/: node.def  node.def.in
templates/show/vpn/ipsec/sa/peer/: node.def
templates/show/vpn/ipsec/sa/profile/: node.def
templates/show/vpn/ipsec/sa/statistics/: node.def  node.def.in
templates/show/vpn/ipsec/sa/stats/: node.def.in
templates/show/vpn/ipsec/sa/verbose/: node.def
templates/show/vpn/ipsec/state/: node.def
templates/show/vpn/ipsec/status/: node.def  node.def.in
templates/show/vpn/route/: node.def
templates/vpn/: node.def
templates/vpn/rsa-key/: node.def
templates/vpn/rsa-key/generate/: node.def
templates/vpn/rsa-key/generate/bits/: node.def
templates/vpn/rsa-key/generate/bits/node.tag/: node.def
(+44 files in other folders)
